--- a/KANDIGI/welcome.html
+++ b/KANDIGI/welcome.html
@@ -26,9 +26,10 @@
 
      <!-- Overlay -->
       <div class="overlay">
-        <img src="/img/Bg Items.png" alt="">
+        <img src="img/Bg Items.png" alt="">
 
-        <div class="lingkaran"></div>
+        <div class="eclipse1"></div>
+        <div class="eclipse2"></div>
       </div>
         
     <!-- Bootstrap Stuff -->
